changing in index.js

--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "'A Curd application with node and react'",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "client-install": "npm install --prefix client",
+    "start": "node app.js",
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "JITENDER",
   "license": "MIT",
